modified meta data

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta property="og:title" content="Bejawada Sai Mahendra Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bejawadasaimahendra.netlify.app/" />
+    <meta property="og:url" content="https://bejawadasaimahendra.vercel.app/" />
     <meta name="description" content="Sai Mahendra's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Bejawada Sai Mahendra, PortFolio , Sai Mahendra's Portfolio" />
@@ -44,8 +44,7 @@
       });
     </script> -->
 
-    <!-- Global site tag (gtag.js) - Google Ads: 825508380 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script>
-    <!--
+    <!-- Global site tag (gtag.js) - Google Ads: 825508380 --> <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
